app/src/test/resources/programs/valid/structs/returnValueMemberAccess.exe
uct Packet = {
    let val: Int = 404;

    ctor() = {}
}

foo poll() -> Packet = {
    new Packet()
}

foo main() -> Int = {
    poll().val
}
