app/src/test/resources/programs/invalid/foonctions/variableAndFunctionSameNames.exe
foo g() -> Int = 12;

foo main() -> Int = {
    let g: Int = 42;
    g()
}
